# mpt-crypto

./: .gersemirc  .pre-commit-config.yaml  CMakeLists.txt  README.md
.gersemi/: definitions.cmake
.github/workflows/: build.yml  pre-commit.yml
include/: secp256k1_mpt.h
include/utility/: mpt_utility.h
paper/: cmpt-compact-sigma.tex
src/: bulletproof_aggregated.c  commitments.c  elgamal.c  equality_proof.c  mpt_internal.h  proof_compact_clawback.c  proof_compact_convertback.c  proof_compact_standard.c  proof_link.c  proof_pok_sk.c  proof_same_plaintext_multi_shared_r.c
src/utility/: mpt_utility.cpp
tests/: CMakeLists.txt  test_commitments.c  test_compact_clawback.c  test_compact_convertback.c  test_compact_standard.c  test_elgamal.c  test_equality_proof.c  test_ipa.c  test_link_proof.c  test_mpt_utility.cpp  test_pok_sk.c
